# epoch_containers

./: .gitignore  Dockerfile  README.md  Singularity  TODO.md  epoch_docker.py  epoch_singularity.py  pyproject.toml  run_epoch.py  tox.ini
.github/workflows/: publish.yml  publish_docker.yml  test.yml
Docker/: Dockerfile  README.md  run_epoch.sh
Docker/epoch_container_utils/: README.md  pyproject.toml
Docker/epoch_container_utils/epoch_container_utils/: __init__.py  _version.py  build_epoch.py  run_epoch.py  utils.py
Docker/epoch_container_utils/tests/: test_build_epoch.py  test_run_epoch.py  test_utils.py
Singularity/: Singularity  build.sh
examples/laser_test_2d/: run.sh  run_docker.sh  run_sbatch.sh  run_singularity.sh
src/epoch_containers/: _version.py  build_epoch.py  run_epoch.py  utils.py
tests/: test_build_epoch.py  test_run_epoch.py  test_utils.py
viking/: README.md  epoch_viking.sh
